<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:round="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_top_bg"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:id="@+id/ll_nickname"
        android:layout_width="305dp"
        android:layout_height="34dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="143dp"
        android:background="#7fffffff">
        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="240dp"
            android:layout_height="24dp"
            android:text="@string/nick_name"
            android:layout_marginLeft="51dp"
            android:textSize="@dimen/text_size_x_large"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_head_portrait"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="143dp"
        android:gravity="top">
        <com.qixingbang.qxb.activity.mine.clipHeadPortrait.RoundImageView
            android:id="@+id/iv_head_portrait"
            android:layout_width="72dp"
            android:layout_height="72dp"
            round:civ_border_width="2dp"
            round:civ_border_color="#313131"
            android:background="@drawable/xml_shape_setting_head"
            android:layout_gravity="center"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_sex_age"
        android:layout_below="@id/ll_nickname"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="107dp"
            android:textSize="@dimen/text_size_48px"
            android:textColor="@color/searchPart__black"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/tv_age"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/text_size_48px"
            android:textColor="@color/searchPart__black"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <View
        android:id="@+id/top_divide_line"
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_below="@id/rl_head_portrait"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@color/mine_divide"/>

    <LinearLayout
        android:id="@+id/ll_middle_button"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/top_divide_line"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_my_favorite"
                style="@style/mineFragment_middle_textView_style"
                android:text="@string/my_favorite"/>
            <Button
                android:id="@+id/btn_favorite"
                android:layout_below="@id/tv_my_favorite"
                style="@style/mineFragment_middle_button_style"
                android:background="@drawable/ic_mine_my_favorite"/>
            <ImageView
                android:id="@+id/iv_hint_favorite"
                style="@style/mineFragment_middle_hint_style"
                android:layout_toRightOf="@id/btn_favorite"
                android:src="@drawable/xml_shape_mine_hint"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_my_question"
                style="@style/mineFragment_middle_textView_style"
                android:text="@string/my_question"/>
            <Button
                android:id="@+id/btn_question"
                android:layout_below="@id/tv_my_question"
                style="@style/mineFragment_middle_button_style"
                android:background="@drawable/ic_mine_my_question"/>
            <ImageView
                android:id="@+id/iv_hint_my_question"
                style="@style/mineFragment_middle_hint_style"
                android:layout_toRightOf="@id/btn_question"
                android:src="@drawable/xml_shape_mine_hint"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_my_reply"
                style="@style/mineFragment_middle_textView_style"
                android:text="@string/my_reply"/>
            <Button
                android:id="@+id/btn_reply"
                android:layout_below="@id/tv_my_reply"
                style="@style/mineFragment_middle_button_style"
                android:background="@drawable/ic_mine_my_question"/>
            <ImageView
                android:id="@+id/iv_hint_my_reply"
                style="@style/mineFragment_middle_hint_style"
                android:layout_toRightOf="@id/btn_reply"
                android:src="@drawable/xml_shape_mine_hint"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_system_message"
                style="@style/mineFragment_middle_textView_style"
                android:text="@string/system_message"/>
            <Button
                android:id="@+id/btn_system_message"
                android:layout_below="@id/tv_system_message"
                style="@style/mineFragment_middle_button_style"
                android:background="@drawable/ic_mine_system_message"/>
            <ImageView
                android:id="@+id/iv_hint_system_message"
                style="@style/mineFragment_middle_hint_style"
                android:layout_toRightOf="@id/btn_system_message"
                android:src="@drawable/xml_shape_mine_hint"/>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/middle_line"
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_below="@id/ll_middle_button"
        android:layout_centerHorizontal="true"
        android:background="@color/mine_divide"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/middle_line"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_setting"
            style="@style/mineFragment_bottom_rl_style">

            <TextView
                style="@style/mineFragment_bottom_textView_style"
                android:text="@string/setting"/>

            <ImageView
                style="@style/mineFragment_bottom_ImageView_style"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_about_qxb"
            style="@style/mineFragment_bottom_rl_style">
            <TextView
                style="@style/mineFragment_bottom_textView_style"
                android:text="@string/about_qxb"/>

            <ImageView
                style="@style/mineFragment_bottom_ImageView_style"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_feedback"
            style="@style/mineFragment_bottom_rl_style">
            <TextView
                style="@style/mineFragment_bottom_textView_style"
                android:text="@string/feedback"/>

            <ImageView
                style="@style/mineFragment_bottom_ImageView_style"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_clear_cache"
            style="@style/mineFragment_bottom_rl_style">
            <TextView
                style="@style/mineFragment_bottom_textView_style"
                android:text="@string/clean_cache"/>

            <ImageView
                style="@style/mineFragment_bottom_ImageView_style"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>